--- a/tomcat/webapps/Trawl/index.html
+++ b/tomcat/webapps/Trawl/index.html
@@ -1,3 +1,9 @@
+<!--
+
+Double Handle Slider Modified from: http://jqueryui.com/slider/#range
+
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,8 +13,15 @@
     <meta name="description" content="insert a description"> <!--TODO-->
     <title>TrawlTool</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="script.js"></script>
 
+
+    <!--JQuery-->
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+
+    <!-- MUST load JQuery Library before loading this-->
+    <script src="script.js"></script>
     <!--Fonts-->
     <!--Open Sans Rg-400/Semi-600/Bd-700-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
@@ -76,21 +89,20 @@
         </section>
 
         <section id="yearIn">
-            Year Range
+            Year Range:
+            <span id="fromtoYear">InnerHtml</span>
             <form>
-                <!--TODO: Get proper ranges, make max automatic.-->
-                <input type="range" id="yearR" value="2000" min="1960" max="2016" oninput="brightR()"><br>
-                <input type="number" id="fromYear" class="yearN" value="2000" min="1960" max="2016" oninput="brightN()">
-                -
-                <input type="number" id ="toYear" class="yearN" value="2000" min="1960" max="2016" oninput="brightN()">
+                <!--<input type="number" id="fromYear" class="yearN" value="2000" min="1960" max="2016" oninput="brightN()">-->
+                <div id="slider-range"></div>
             </form>
         </section>
 
         <section id="outputIn">
             <form>
+                <!--TODO: Set Default button entered-->
                 <input type="radio" name="gender" value="male"> Map
                 <input type="radio" name="gender" value="female"> Histogram
-                <input type="SUBMIT">
+                <input type="submit">
             </form>
             <form>
                 <input type="submit" value="Individual Records"> <!--To records.html-->
