--- a/tomcat/webapps/Trawl/about.html
+++ b/tomcat/webapps/Trawl/about.html
@@ -7,7 +7,8 @@
     <meta name="description" content="insert a description"> <!--TODO-->
     <title>About|TrawlTool</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+	
     <!--Fonts-->
     <!--Open Sans Rg-400/Semi-600/Bd-700-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
@@ -27,6 +28,11 @@
         Insert some info about the project, blah blah blah.<br>
         Add photo credit if applicable
     </section>
+    
+    <div id="histogram">
+    
+    </div>
 
 </body>
+<script src="histogram.js"></script>
 </html>
