add comments for a whole bunch of classes & packages

--- a/tomcat/webapps/Trawl/about.html
+++ b/tomcat/webapps/Trawl/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="insert, some, keywords"> <!--TODO-->
     <meta name="description" content="insert a description"> <!--TODO-->
-    <title>About|TrawlTool</title>
+    <title>About | TrawlExpert</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 	
@@ -16,10 +16,11 @@
 <body>
     <header>
         <div class="headerWrapper">
-            <a href="index.jsp" >TrawlTool</a>
+            <a href="index.jsp" >TrawlExpert</a>
             <span class="nav-bar">
                 <a href="about.html">About</a> |
-                <a href="index.jsp" target="_blank">Gitlab/Github Nonfunc!</a>
+                <a href="doc/" target="_blank">TrawlExpert API</a> |
+                <a href="https://gitlab.cas.mcmaster.ca/schankuc/2XB3" target="_blank">Git</a>
             </span>
         </div>
     </header>
