--- a/tomcat/webapps/Trawl/about.html
+++ b/tomcat/webapps/Trawl/about.html
@@ -26,8 +26,7 @@
     </header>
 
     <section>
-        Insert some info about the project, blah blah blah.<br>
-        Add photo credit if applicable
+        Photo by <a href="https://unsplash.com/@prelevicm" target="_blank">Milos Prelevic</a> on <a href="https://unsplash.com" target="_blank">Unsplash</a> [Modified]
     </section>
     
     <div id="histogram">
